--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-//project made by Francis Constantino and Jalil Johnson
 <html lang="en">
+<!-- project made by Francis Constantino and Jalil Johnson -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
