--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <!-- project made by Francis Constantino and Jalil Johnson -->
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Game</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
     <div class="wrapper">
         <div id="score">Score: 0</div>
 
@@ -17,11 +16,83 @@
             <div id="character"></div>
             <div id="block"></div>
         </div>
-        
+
         <div class="error">Press SPACE to Start</div>
     </div>
 
-    <script src="game.js"></script>
+    <script>
+        var character = document.getElementById("character");
+        var block = document.getElementById("block");
+        var scoreText = document.getElementById("score");
+        var error = document.querySelector(".error");
 
+        var score = 0;
+        var isGameOver = false;
+
+        document.body.onkeyup = function (e) {
+            if (e.code === "Space") {
+                if (isGameOver) {
+                    restartGame();
+                } else {
+                    jump();
+                }
+            }
+        };
+
+        function jump() {
+            if (isGameOver) return;
+            error.style.display = "none";
+
+            if (!block.classList.contains("blockAnimate")) {
+                block.classList.add("blockAnimate");
+            }
+
+            if (!character.classList.contains("animate")) {
+                character.classList.add("animate");
+            }
+
+            setTimeout(() => {
+                character.classList.remove("animate");
+            }, 500);
+        }
+
+        var checkDead = setInterval(() => {
+            var characterTop = parseInt(window.getComputedStyle(character).getPropertyValue("top"));
+            var blockLeft = parseInt(window.getComputedStyle(block).getPropertyValue("left"));
+
+            if (blockLeft < 50 && blockLeft > 0 && characterTop >= 130) {
+                gameOver();
+            }
+        }, 10);
+
+        function updateScore() {
+            if (!isGameOver) {
+                score++;
+                scoreText.innerHTML = "Score: " + score;
+            }
+        }
+
+        block.addEventListener("animationiteration", updateScore);
+
+        function gameOver() {
+            isGameOver = true;
+            error.style.display = "block";
+            error.innerHTML = "Game over! Press SPACE to restart.";
+            block.classList.remove("blockAnimate");
+        }
+
+        function restartGame() {
+            isGameOver = false;
+            score = 0;
+            scoreText.innerHTML = "Score: " + score;
+            error.style.display = "none";
+            block.classList.remove("blockAnimate");
+
+            setTimeout(() => {
+                block.classList.add("blockAnimate");
+            }, 100);
+        }
+    </script>
 </body>
 </html>
+
