--- a/index.html
+++ b/index.html
@@ -1,98 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- project made by Francis Constantino and Jalil Johnson -->
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Game</title>
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Dino Game</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="wrapper">
-        <div id="score">Score: 0</div>
+  <div class="wrapper">
+    <div id="score">Score: 0</div>
 
-        <div id="game">
-            <div id="character"></div>
-            <div id="block"></div>
-        </div>
-
-        <div class="error">Press SPACE to Start</div>
+    <div id="game">
+      <div id="character"></div>
+      <div id="block"></div>
     </div>
 
-    <script>
-        var character = document.getElementById("character");
-        var block = document.getElementById("block");
-        var scoreText = document.getElementById("score");
-        var error = document.querySelector(".error");
+    <div class="error">Press SPACE to Start</div>
+  </div>
 
-        var score = 0;
-        var isGameOver = false;
+  <script>
+    const character = document.getElementById("character");
+    const block = document.getElementById("block");
+    const scoreText = document.getElementById("score");
+    const error = document.querySelector(".error");
 
-        document.body.onkeyup = function (e) {
-            if (e.code === "Space") {
-                if (isGameOver) {
-                    restartGame();
-                } else {
-                    jump();
-                }
-            }
-        };
+    let score = 0;
+    let isGameOver = false;
 
-        function jump() {
-            if (isGameOver) return;
-            error.style.display = "none";
-
-            if (!block.classList.contains("blockAnimate")) {
-                block.classList.add("blockAnimate");
-            }
-
-            if (!character.classList.contains("animate")) {
-                character.classList.add("animate");
-            }
-
-            setTimeout(() => {
-                character.classList.remove("animate");
-            }, 500);
+    document.body.onkeyup = (e) => {
+      if (e.code === "Space") {
+        if (isGameOver) {
+          restartGame();
+        } else {
+          jump();
         }
+      }
+    };
 
-        var checkDead = setInterval(() => {
-            var characterTop = parseInt(window.getComputedStyle(character).getPropertyValue("top"));
-            var blockLeft = parseInt(window.getComputedStyle(block).getPropertyValue("left"));
+    function jump() {
+      if (isGameOver) return;
+      error.style.display = "none";
 
-            if (blockLeft < 50 && blockLeft > 0 && characterTop >= 130) {
-                gameOver();
-            }
-        }, 10);
+      if (!block.classList.contains("blockAnimate")) {
+        block.classList.add("blockAnimate");
+      }
 
-        function updateScore() {
-            if (!isGameOver) {
-                score++;
-                scoreText.innerHTML = "Score: " + score;
-            }
-        }
+      if (!character.classList.contains("animate")) {
+        character.classList.add("animate");
+      }
 
-        block.addEventListener("animationiteration", updateScore);
+      setTimeout(() => {
+        character.classList.remove("animate");
+      }, 500);
+    }
 
-        function gameOver() {
-            isGameOver = true;
-            error.style.display = "block";
-            error.innerHTML = "Game over! Press SPACE to restart.";
-            block.classList.remove("blockAnimate");
-        }
+    const checkDead = setInterval(() => {
+      const characterTop = parseInt(window.getComputedStyle(character).getPropertyValue("top"));
+      const blockLeft = parseInt(window.getComputedStyle(block).getPropertyValue("left"));
 
-        function restartGame() {
-            isGameOver = false;
-            score = 0;
-            scoreText.innerHTML = "Score: " + score;
-            error.style.display = "none";
-            block.classList.remove("blockAnimate");
+      if (blockLeft < 50 && blockLeft > 0 && characterTop >= 130) {
+        gameOver();
+      }
+    }, 10);
 
-            setTimeout(() => {
-                block.classList.add("blockAnimate");
-            }, 100);
-        }
-    </script>
+    function updateScore() {
+      if (!isGameOver) {
+        score++;
+        scoreText.textContent = "Score: " + score;
+      }
+    }
+
+    block.addEventListener("animationiteration", updateScore);
+
+    function gameOver() {
+      isGameOver = true;
+      error.style.display = "block";
+      error.textContent = "Game over! Press SPACE to restart.";
+      block.classList.remove("blockAnimate");
+    }
+
+    function restartGame() {
+      isGameOver = false;
+      score = 0;
+      scoreText.textContent = "Score: " + score;
+      error.style.display = "none";
+      block.classList.remove("blockAnimate");
+
+      setTimeout(() => {
+        block.classList.add("blockAnimate");
+      }, 100);
+    }
+  </script>
 </body>
 </html>
-
