--- a/index.html
+++ b/index.html
@@ -4,32 +4,31 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Game</title>
+  <title>My Dino Game</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <div class="wrapper">
     <div id="score">Score: 0</div>
 
     <div id="game">
-      <div id="character"></div>
-      <div id="block"></div>
-      <div class="error">Press SPACE to Start</div> <!-- Moved here -->
-    </div>
+    <div id="character"></div>
+    <div id="block"></div>
+    <div class="error">Press SPACE to Start</div>
+</div>
   </div>
 
   <script>
-    var character = document.getElementById("character");
-    var block = document.getElementById("block");
-    var scoreText = document.getElementById("score");
-    var error = document.querySelector(".error");
+    const character = document.getElementById("character");
+    const block = document.getElementById("block");
+    const scoreText = document.getElementById("score");
+    const error = document.querySelector(".error");
 
-    var score = 0;
-    var isGameOver = false;
+    let score = 0;
+    let isGameOver = false;
 
-    document.body.onkeyup = function (e) {
-      if (e.key == " " || e.code == "Space") {
+    document.body.onkeyup = (e) => {
+      if (e.code === "Space") {
         if (isGameOver) {
           restartGame();
         } else {
@@ -41,9 +40,11 @@
     function jump() {
       if (isGameOver) return;
       error.style.display = "none";
+
       if (!block.classList.contains("blockAnimate")) {
         block.classList.add("blockAnimate");
       }
+
       if (!character.classList.contains("animate")) {
         character.classList.add("animate");
       }
@@ -53,11 +54,11 @@
       }, 500);
     }
 
-    var checkDead = setInterval(() => {
-      var characterTop = parseInt(window.getComputedStyle(character).getPropertyValue("top"));
-      var blockLeft = parseInt(window.getComputedStyle(block).getPropertyValue("left"));
+    const checkDead = setInterval(() => {
+      const characterTop = parseInt(window.getComputedStyle(character).getPropertyValue("top"));
+      const blockLeft = parseInt(window.getComputedStyle(block).getPropertyValue("left"));
 
-      if (blockLeft < 90 && blockLeft > 40 && characterTop >= 130) {
+      if (blockLeft < 50 && blockLeft > 0 && characterTop >= 130) {
         gameOver();
       }
     }, 10);
@@ -65,7 +66,7 @@
     function updateScore() {
       if (!isGameOver) {
         score++;
-        scoreText.innerHTML = "Score: " + score;
+        scoreText.textContent = "Score: " + score;
       }
     }
 
@@ -74,14 +75,14 @@
     function gameOver() {
       isGameOver = true;
       error.style.display = "block";
-      error.innerHTML = "Game over! Press SPACE to restart.";
+      error.textContent = "Game over! Press SPACE to restart.";
       block.classList.remove("blockAnimate");
     }
 
     function restartGame() {
       isGameOver = false;
       score = 0;
-      scoreText.innerHTML = "Score: " + score;
+      scoreText.textContent = "Score: " + score;
       error.style.display = "none";
       block.classList.remove("blockAnimate");
 
@@ -90,6 +91,5 @@
       }, 100);
     }
   </script>
-
 </body>
 </html>
